--- a/lab4/styles/style.css
+++ b/lab4/styles/style.css
@@ -6,12 +6,12 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
-  padding:0;
+  padding: 0;
 }
 
 .background-blue {
-  background: rgb(6,54,95);
-  background: linear-gradient(0deg, rgba(6,54,95,1) 35%, rgba(28,83,128,1) 100%);
+  background: rgb(6, 54, 95);
+  background: linear-gradient(0deg, rgba(6, 54, 95, 1) 35%, rgba(28, 83, 128, 1) 100%);
   width: 100vw;
   height: 270px;
 }
@@ -38,19 +38,20 @@ body {
   display: flex;
   justify-content: space-between;
 }
+
 .logo {
   width: 250px;
-  
+
 }
 
 .button {
   padding: 7px 10px;
-  background: rgb(6,54,95);
-  background: linear-gradient(0deg, rgba(6,54,95,1) 35%, rgba(28,83,128,1) 100%);
+  background: rgb(6, 54, 95);
+  background: linear-gradient(0deg, rgba(6, 54, 95, 1) 35%, rgba(28, 83, 128, 1) 100%);
   display: flex;
   align-items: center;
   gap: 10px;
-  border: 1px solid rgb(6,54,95);
+  border: 1px solid rgb(6, 54, 95);
   border-radius: 3px;
   color: whitesmoke;
   font-weight: 600;
@@ -65,7 +66,7 @@ body {
 
 .text h1 {
   margin: 0;
-  color: rgb(6,54,95);
+  color: rgb(6, 54, 95);
   width: 65%;
 }
 
@@ -75,6 +76,7 @@ body {
 
 .downloads {
   display: flex;
+  justify-content: center;
   gap: 20px;
   margin-top: 40px;
 }
